--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <option value="student">Student</option>
           <option value="other">Other</option>
         </select>
+        <input type="text" id="other_title" name="job_role" placeholder="Your Job Role">
       </fieldset>
 
       <fieldset class="shirt">
