Completed name input field real-time error message validation.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </fieldset>
 
-      <fieldset class="activities">
+      <fieldset class="activities" id="register-error">
         <legend>Register for Activities</legend>
         <label><input type="checkbox" name="all"> Main Conference — $200</label>
         <label><input type="checkbox" name="js-frameworks"> JavaScript Frameworks Workshop — Tuesday 9am-12pm, $100</label>
