Removed some comments that are no longer needed, replaced jQuery in createOtherJobTextArea function, fixed console error in formValidation function.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <option value="student">Student</option>
           <option value="other">Other</option>
         </select>
-        <input type="text" id="other_title" name="job_role" placeholder="Your Job Role">
+        <input type="text" id="other-title" name="job_role" placeholder="Your Job Role">
       </fieldset>
 
       <fieldset class="shirt">
@@ -72,7 +72,7 @@
         </div>
       </fieldset>
 
-      <fieldset class="activities" id="register-error">
+      <fieldset class="activities">
         <legend>Register for Activities</legend>
         <label><input type="checkbox" name="all"> Main Conference — $200</label>
         <label><input type="checkbox" name="js-frameworks"> JavaScript Frameworks Workshop — Tuesday 9am-12pm, $100</label>
